# care

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  config.yaml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  plugin_request.yml
.github/codeql/: README.md  codeql-config.yml
.github/codeql/extensions/: qlpack.yml  sanitizers.model.yml
.github/release-notes/: v0.2.0-alpha.2.md  v0.2.0-alpha.3.md  v0.2.0-alpha.4.md  v0.2.0-alpha.md
.github/workflows/: codeql.yml  governance.yml  windows-build.yml  windows-tests.yml
assets/: icon.icns
care/: __init__.py  main.py
care/api/: __init__.py  deps.py  routes_config.py  routes_exports.py  routes_health.py  routes_jobs.py  routes_offline.py  routes_plugins.py  routes_reports.py  routes_review.py  routes_template_builder.py  runner.py
care/audit/: __init__.py  license_report.py  model_manifest.py  sbom.py
care/cli/: __init__.py  __main__.py  desktop.py  main.py  shortcut.py
care/core/: config.py  config_writer.py  constants.py  errors.py  governance_guard.py  logging.py  offline_guard.py  paths.py  plugin_helpers.py  runtime_paths.py  runtime_state.py  secrets.py  security.py
care/document_ai/: base.py  registry.py  result.py
care/document_ai/providers/: kosmos25_provider.py  layoutlm_provider.py  mock_vlm_provider.py
care/document_ir/: __init__.py  builder.py  models.py  reconcile.py  serialization.py
care/export/: __init__.py  exporter.py  manifest.py  writers.py
care/extraction/: __init__.py  anchor_match.py  anchors.py  diagram_extractor.py  narrative_extractor.py  region_extractor.py  vlm_diagram_review.py
care/ingestion/: __init__.py  file_manifest.py  hashing.py  scanner.py  supported_files.py
care/llm/: __init__.py  base.py  image_encoding.py  registry.py  safety.py
care/llm/providers/: _local_server.py  anthropic_provider.py  gemini_provider.py  hf_local_provider.py  llamacpp_provider.py  mock_llm_provider.py  ollama_provider.py  openai_provider.py  vllm_provider.py
care/ocr/: base.py  registry.py  result.py
care/ocr/providers/: mock_ocr_provider.py  noop_provider.py  onnxtr_provider.py  paddleocr_provider.py  tesseract_provider.py
care/pdf/: __init__.py  base.py  pypdfium2_backend.py
care/pii/: _hf_token_classification.py  base.py  entities.py  merge.py  policies.py  registry.py
care/pii/providers/: mock_pii_provider.py  openai_privacy_filter_provider.py  optional_piiranha_provider.py  presidio_provider.py  regex_accuracy.json  regex_provider.py  roberta_ner_provider.py
care/pii/recognizers/: __init__.py  _base.py  address.py  case_number.py  date_of_birth.py  driver_license.py  email.py  insurance_policy.py  license_plate.py  medical_info.py  person_name.py  phone.py  report_number.py  signature.py  vin.py
care/redaction/: __init__.py  audit.py  bbox_mapper.py  image_redactor.py  policies.py  text_redactor.py
care/review/: __init__.py  confidence.py  qa_flags.py  review_models.py
care/services/: __init__.py  jobs.py  region_suggester.py  template_builder.py
care/templates/: __init__.py  detector.py  loader.py  registry.py  schemas.py  scoring.py
care/workers/: pipeline.py
docs/: architecture.md  deployment-windows.md  deployment.md  document-ai-plugins.md  evaluation.md  license-and-model-governance.md  no-network-guarantee.md  offline-mode.md  packaging.md  pii-policy.md  plugin-system.md  redaction.md  security.md  template-authoring.md
frontend/: index.html
frontend/css/: app.css
frontend/js/: api.js  app.js  builder.js  plugins.js  qa_glossary.js  review.js  settings.js  utils.js
models/: README.md
models/document_ai/kosmos-2.5/: README.md
models/document_ai/layoutlm/: README.md
models/ocr/paddleocr/: README.md
scripts/: build_wheelhouse.sh  codeql_dismiss_path_injection.sh  compute_model_checksums.py  generate_icon.py  generate_sbom.sh  governance_check.py  package_offline_installer.sh  scan_frontend_external_assets.py  verify_no_network.py
scripts/bench/: README.md  run_pii_bench.py  synthetic_corpus.py
templates/: README.md
templates/example_state/: example_template_v1.yaml
tests/: _fixtures.py  conftest.py
tests/api/: test_app_factory.py  test_cli.py  test_cli_app.py  test_frontend_assets.py  test_jobs_and_reports.py  test_jobs_template_filter.py  test_path_safety.py  test_plugin_enable_flow.py  test_routes_basic.py  test_routes_config.py  test_serve_binding.py  test_shortcut.py  test_suggest_regions.py  test_template_builder.py  test_template_builder_confidence.py
tests/governance/: test_governance_check.py  test_phase15_windows_build.py  test_phase7_packaging_artifacts.py  test_phase7_scripts_run.py
tests/integration/: test_pipeline_phase2.py  test_pipeline_phase3.py  test_pipeline_phase4.py  test_pipeline_phase5.py
tests/offline/: test_lifespan_guard.py  test_offline_guard.py  test_pipeline_offline.py
tests/unit/: test_anchor_match.py  test_audit_sbom.py  test_bbox_mapper.py  test_config.py  test_config_writer.py  test_diagram_extractor.py  test_documentir_builder.py  test_documentir_serialization.py  test_export_manifest.py  test_exporter_safety.py  test_governance_guard.py  test_hf_token_classification_mixin.py  test_image_redactor.py  test_ingestion.py  test_kosmos25_provider.py  test_layoutlm_provider.py  test_llm_providers.py  test_llm_safety.py  test_logging_frozen.py  test_logging_redacts_pii.py  test_main_app_factory.py  test_mock_providers.py  test_narrative_extractor.py  test_ocr_chain.py  test_onnxtr_provider.py  test_openai_integration.py  test_openai_privacy_filter_provider.py  test_paddleocr_provider.py  test_path_normalization.py  test_paths_user_data_aware.py  test_pdf_backend.py  test_phase9_fuzzy_extraction.py  test_phase9_vlm_diagram_review.py  test_pii_merge.py  test_pii_recognizers.py  test_pii_regex_provider.py  test_piiranha_provider.py  test_plugin_helpers.py  test_plugin_registries.py  test_presidio_provider.py  (+19 more)
(+4 files in other folders)
